Listing Category Popup Alignment Issue - Fixed (#2155)
Before: https://prnt.sc/bKWJiL9RKl2c
After: https://prnt.sc/CmW-P5kmQ0AK

--- a/assets/css/all-listings.rtl.css
+++ b/assets/css/all-listings.rtl.css
@@ -17339,6 +17339,15 @@ input.directorist-toggle-input:checked + .directorist-toggle-input-label span.di
   pointer-events: all;
 }
 
+.directorist-listing-single__meta__right .directorist-listing-category__popup__content {
+  right: unset;
+  left: -30px;
+}
+.directorist-listing-single__meta__right .directorist-listing-category__popup__content:after {
+  right: unset;
+  left: 40px;
+}
+
 .directorist-listing-price-range span {
   font-weight: 600;
   color: rgba(122, 130, 166, 0.3);
